--- a/settings.json
+++ b/settings.json
@@ -1,71 +1,60 @@
 {
-    "alt-speed-down": 50,
-    "alt-speed-enabled": false,
-    "alt-speed-time-begin": 540,
-    "alt-speed-time-day": 127,
-    "alt-speed-time-enabled": false,
-    "alt-speed-time-end": 1020,
-    "alt-speed-up": 50,
-    "bind-address-ipv4": "0.0.0.0",
-    "bind-address-ipv6": "::",
-    "blocklist-enabled": false,
-    "blocklist-url": "http://www.example.com/blocklist",
-    "cache-size-mb": 4,
-    "dht-enabled": true,
-    "download-dir": "/var/lib/transmission-daemon/downloads",
-    "download-limit": 100,
-    "download-limit-enabled": 0,
-    "download-queue-enabled": true,
-    "download-queue-size": 5,
-    "encryption": 1,
-    "idle-seeding-limit": 30,
-    "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/var/lib/transmission-daemon/Downloads",
-    "incomplete-dir-enabled": false,
-    "lpd-enabled": false,
-    "max-peers-global": 200,
-    "message-level": 2,
-    "peer-congestion-algorithm": "",
-    "peer-id-ttl-hours": 6,
-    "peer-limit-global": 200,
-    "peer-limit-per-torrent": 50,
-    "peer-port": 51413,
-    "peer-port-random-high": 65535,
-    "peer-port-random-low": 49152,
-    "peer-port-random-on-start": false,
-    "peer-socket-tos": "default",
-    "pex-enabled": true,
-    "port-forwarding-enabled": false,
-    "preallocation": 1,
-    "prefetch-enabled": true,
-    "queue-stalled-enabled": true,
-    "queue-stalled-minutes": 30,
-    "ratio-limit": 2,
-    "ratio-limit-enabled": false,
-    "rename-partial-files": true,
-    "rpc-authentication-required": true,
-    "rpc-bind-address": "0.0.0.0",
-    "rpc-enabled": true,
-    "rpc-password": "{949d8df66fe81f31dd67375482852d07583b9dfa8mSUuO9z",
-    "rpc-port": 9091,
-    "rpc-url": "/transmission/",
-    "rpc-username": "transmission",
-    "rpc-whitelist": "192.168.*.*",
-    "rpc-whitelist-enabled": true,
-    "scrape-paused-torrents-enabled": true,
-    "script-torrent-done-enabled": false,
-    "script-torrent-done-filename": "",
-    "seed-queue-enabled": false,
-    "seed-queue-size": 10,
-    "speed-limit-down": 100,
-    "speed-limit-down-enabled": false,
-    "speed-limit-up": 100,
-    "speed-limit-up-enabled": false,
-    "start-added-torrents": true,
-    "trash-original-torrent-files": false,
-    "umask": 18,
-    "upload-limit": 100,
-    "upload-limit-enabled": 0,
-    "upload-slots-per-torrent": 14,
-    "utp-enabled": true
+  "alt-speed-down": 500,
+  "alt-speed-enabled": true,
+  "alt-speed-time-begin": 480,
+  "alt-speed-time-day": 127,
+  "alt-speed-time-enabled": true,
+  "alt-speed-time-end": 0,
+  "alt-speed-up": 10,
+  "bind-address-ipv4": "0.0.0.0",
+  "bind-address-ipv6": "::",
+  "blocklist-enabled": true,
+  "blocklist-url": "http://iblocklist.charlieprice.org/f/tagqfxtteucbuldhezkz/bt_level1.gz",
+  "dht-enabled": true,
+  "download-dir": "/media/nfs",
+  "download-limit": 1000,
+  "download-limit-enabled": 0,
+  "encryption": 2,
+  "incomplete-dir": "/incomplete",
+  "incomplete-dir-enabled": true,
+  "lazy-bitfield-enabled": true,
+  "max-peers-global": 200,
+  "message-level": 2,
+  "open-file-limit": 32,
+  "peer-limit-global": 240,
+  "peer-limit-per-torrent": 60,
+  "peer-port": 45555,
+  "peer-port-random-high": 40000,
+  "peer-port-random-low": 40599,
+  "peer-port-random-on-start": false,
+  "peer-socket-tos": 0,
+  "pex-enabled": true,
+  "port-forwarding-enabled": false,
+  "preallocation": 1,
+  "proxy": "",
+  "proxy-auth-enabled": false,
+  "proxy-auth-password": "",
+  "proxy-auth-username": "",
+  "proxy-enabled": false,
+  "proxy-port": 80,
+  "proxy-type": 0,
+  "ratio-limit": 0.2500,
+  "ratio-limit-enabled": true,
+  "rename-partial-files": true,
+  "rpc-authentication-required": true,
+  "rpc-bind-address": "0.0.0.0",
+  "rpc-enabled": true,
+  "rpc-password": "password",
+  "rpc-port": 9091,
+  "rpc-username": "transmission",
+  "rpc-whitelist": "127.0.0.1,*.*.*.*",
+  "rpc-whitelist-enabled": true,
+  "speed-limit-down": 1500,
+  "speed-limit-down-enabled": true,
+  "speed-limit-up": 50,
+  "speed-limit-up-enabled": true,
+  "umask": 2,
+  "upload-slots-per-torrent": 4,
+  "watch-dir": "/watch",
+  "watch-dir-enabled": true
 }
